<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/login_bg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/act_register_et_phone"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/register_phone"
        android:textColorHint="@color/colorFont"
        android:textColor="@color/colorFont"
        android:drawableLeft="@drawable/selector_phone"
        android:background="@drawable/selector_et"
        />
    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/act_register_et_code"
            android:layout_width="171dp"
            android:layout_height="match_parent"
            android:hint="@string/register_code"
            android:textColorHint="@color/colorFont"
            android:textColor="@color/colorFont"
            android:background="@drawable/selector_et_code"
            android:drawableLeft="@drawable/selector_code"
            />
        <Button
            android:id="@+id/act_register_btn_getcode"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="@string/register_get_code"
            android:textColor="@color/colorGreenFont"
            android:layout_alignParentRight="true"
            android:textSize="15sp"
            android:background="@drawable/selector_btn_code"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/act_register_et_nickname"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="3dp"
        android:textColorHint="@color/colorFont"
        android:textColor="@color/colorFont"
        android:drawableLeft="@drawable/selector_name"
        android:background="@drawable/selector_et"
        android:hint="@string/register_nickname"/>

    <EditText
        android:id="@+id/act_register_et_pwd"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="3dp"
        android:textColor="@color/colorFont"
        android:textColorHint="@color/colorFont"
        android:hint="@string/register_pwd"
        android:drawableLeft="@drawable/selector_pwd"
        android:inputType="textPassword"
        android:password="true"
        android:background="@drawable/selector_et"/>
    <EditText
        android:id="@+id/act_register_et_pwd2"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="3dp"
        android:textColor="@color/colorFont"
        android:textColorHint="@color/colorFont"
        android:drawableLeft="@drawable/selector_pwd"
        android:password="true"
        android:inputType="textPassword"
        android:background="@drawable/selector_et"
        android:hint="@string/register_pwd2"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorFont"
            android:text="@string/register_text"
            android:gravity="center"
            android:drawableLeft="@drawable/xy"/>
        <TextView
            android:id="@+id/act_register_tv_xy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/register_text2"
            android:textColor="@color/colorGreenFont"/>
    </LinearLayout>
    <Button
        android:id="@+id/act_register_btn_reg"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textColor="@color/colorFont"
        android:text="@string/register"
        android:background="@drawable/selector_btn"/>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/act_register_btn_login"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/selector_btn"
        android:textColor="@color/colorFont"
        android:text="@string/register_back_ogin" />
</LinearLayout>